@@ -1,7 +1,7 @@
 //
 // ServerApplication.cpp
 //
-// $Id: //poco/1.3/Util/src/ServerApplication.cpp#12 $
+// $Id: //poco/1.3/Util/src/ServerApplication.cpp#15 $
 //
 // Library: Util
 // Package: Application
@@ -37,11 +37,13 @@
 #include "Poco/Util/ServerApplication.h"
 #include "Poco/Util/Option.h"
 #include "Poco/Util/OptionSet.h"
+#include "Poco/Util/OptionException.h"
 #include "Poco/Exception.h"
 #include "Poco/Process.h"
 #include "Poco/NumberFormatter.h"
 #include "Poco/NamedEvent.h"
 #include "Poco/Logger.h"
+#include "Poco/String.h"
 #if defined(POCO_OS_FAMILY_UNIX)
 #include "Poco/TemporaryFile.h"
 #include <stdlib.h>
@@ -207,13 +209,6 @@ void ServerApplication::ServiceMain(DWORD argc, LPTSTR* argv)
 		_serviceStatus.dwWin32ExitCode           = ERROR_SERVICE_SPECIFIC_ERROR;
 		_serviceStatus.dwServiceSpecificExitCode = EXIT_SOFTWARE; 
 	}
-	try
-	{
-		app.uninitialize();
-	}
-	catch (...)
-	{
-	}
 	_serviceStatus.dwCurrentState = SERVICE_STOPPED;
 	SetServiceStatus(_serviceStatusHandle, &_serviceStatus);
 }
@@ -254,7 +249,6 @@ int ServerApplication::run(int argc, char** argv)
 				break;
 			default:
 				rc = run();
-				uninitialize();
 			}
 		}
 		catch (Exception& exc)
@@ -292,7 +286,6 @@ int ServerApplication::run(int argc, wchar_t** argv)
 				break;
 			default:
 				rc = run();
-				uninitialize();
 			}
 		}
 		catch (Exception& exc)
@@ -329,7 +322,7 @@ bool ServerApplication::isService()
 bool ServerApplication::hasConsole()
 {
 	HANDLE hStdOut = GetStdHandle(STD_OUTPUT_HANDLE);
-	return  hStdOut != INVALID_HANDLE_VALUE && hStdOut != NULL;
+	return hStdOut != INVALID_HANDLE_VALUE && hStdOut != NULL;
 }
 
 
@@ -343,7 +336,11 @@ void ServerApplication::registerService()
 		service.registerService(path);
 	else
 		service.registerService(path, _displayName);
-	logger().information("The application has been successfully registered as a service");
+	if (_startup == "auto")
+		service.setStartup(WinService::SVC_AUTO_START);
+	else if (_startup == "manual")
+		service.setStartup(WinService::SVC_MANUAL_START);
+	logger().information("The application has been successfully registered as a service.");
 }
 
 
@@ -353,7 +350,7 @@ void ServerApplication::unregisterService()
 	
 	WinService service(name);
 	service.unregisterService();
-	logger().information("The service has been successfully unregistered");
+	logger().information("The service has been successfully unregistered.");
 }
 
 
@@ -362,33 +359,59 @@ void ServerApplication::defineOptions(OptionSet& options)
 	Application::defineOptions(options);
 
 	options.addOption(
-		Option("registerService", "", "register application as a service")
-			.required(false)
-			.repeatable(false));
-
-	options.addOption(
-		Option("unregisterService", "", "unregister application as a service")
-			.required(false)
-			.repeatable(false));
-
-	options.addOption(
-		Option("displayName", "", "specify a display name for the service (only with /registerService)")
+		Option("registerService", "", "Register the application as a service.")
 			.required(false)
 			.repeatable(false)
-			.argument("name"));
+			.callback(OptionCallback<ServerApplication>(this, &ServerApplication::handleRegisterService)));
+
+	options.addOption(
+		Option("unregisterService", "", "Unregister the application as a service.")
+			.required(false)
+			.repeatable(false)
+			.callback(OptionCallback<ServerApplication>(this, &ServerApplication::handleUnregisterService)));
+
+	options.addOption(
+		Option("displayName", "", "Specify a display name for the service (only with /registerService).")
+			.required(false)
+			.repeatable(false)
+			.argument("name")
+			.callback(OptionCallback<ServerApplication>(this, &ServerApplication::handleDisplayName)));
+
+	options.addOption(
+		Option("startup", "", "Specify the startup mode for the service (only with /registerService).")
+			.required(false)
+			.repeatable(false)
+			.argument("automatic|manual")
+			.callback(OptionCallback<ServerApplication>(this, &ServerApplication::handleStartup)));
 }
 
 
-void ServerApplication::handleOption(const std::string& name, const std::string& value)
+void ServerApplication::handleRegisterService(const std::string& name, const std::string& value)
 {
-	if (name == "registerService")
-		_action = SRV_REGISTER;
-	else if (name == "unregisterService")
-		_action = SRV_UNREGISTER;
-	else if (name == "displayName")
-		_displayName = value;
+	_action = SRV_REGISTER;
+}
+
+
+void ServerApplication::handleUnregisterService(const std::string& name, const std::string& value)
+{
+	_action = SRV_UNREGISTER;
+}
+
+
+void ServerApplication::handleDisplayName(const std::string& name, const std::string& value)
+{
+	_displayName = value;
+}
+
+
+void ServerApplication::handleStartup(const std::string& name, const std::string& value)
+{
+	if (Poco::icompare(value, 4, std::string("auto")) == 0)
+		_startup = "auto";
+	else if (Poco::icompare(value, std::string("manual")) == 0)
+		_startup = "manual";
 	else
-		Application::handleOption(name, value);
+		throw InvalidArgumentException("argument to startup option must be 'auto[matic]' or 'manual'");
 }
 
 
@@ -435,17 +458,7 @@ int ServerApplication::run(int argc, char** argv)
 		logger().log(exc);
 		return EXIT_CONFIG;
 	}
-	int rc = run();
-	try
-	{
-		uninitialize();
-	}
-	catch (Exception& exc)
-	{
-		logger().log(exc);
-		rc = EXIT_CONFIG;
-	}
-	return rc;
+	return run();
 }
 
 
@@ -490,34 +503,34 @@ void ServerApplication::defineOptions(OptionSet& options)
 	Application::defineOptions(options);
 
 	options.addOption(
-		Option("daemon", "", "run application as a daemon")
-			.required(false)
-			.repeatable(false));
-
-	options.addOption(
-		Option("pidfile", "", "write PID to given file")
+		Option("daemon", "", "Run application as a daemon.")
 			.required(false)
 			.repeatable(false)
-			.argument("path"));
+			.callback(OptionCallback<ServerApplication>(this, &ServerApplication::handleDaemon)));
+
+	options.addOption(
+		Option("pidfile", "", "Write the process ID of the application to given file.")
+			.required(false)
+			.repeatable(false)
+			.argument("path")
+			.callback(OptionCallback<ServerApplication>(this, &ServerApplication::handlePidFile)));
 }
 
 
-void ServerApplication::handleOption(const std::string& name, const std::string& value)
+void ServerApplication::handleDaemon(const std::string& name, const std::string& value)
 {
-	if (name == "daemon")
-	{
-		config().setBool("application.runAsDaemon", true);
-	}
-	else if (name == "pidfile")
-	{
-		std::ofstream ostr(value.c_str());
-		if (ostr.good())
-			ostr << Poco::Process::id() << std::endl;
-		else
-			throw Poco::CreateFileException("Cannot write PID to file", value);
-		Poco::TemporaryFile::registerForDeletion(value);
-	}
-	else Application::handleOption(name, value);
+	config().setBool("application.runAsDaemon", true);
+}
+
+
+void ServerApplication::handlePidFile(const std::string& name, const std::string& value)
+{
+	std::ofstream ostr(value.c_str());
+	if (ostr.good())
+		ostr << Poco::Process::id() << std::endl;
+	else
+		throw Poco::CreateFileException("Cannot write PID to file", value);
+	Poco::TemporaryFile::registerForDeletion(value);
 }
 
 
@@ -581,29 +594,13 @@ int ServerApplication::run(int argc, char** argv)
 		logger().log(exc);
 		return EXIT_CONFIG;
 	}
-	int rc = run();
-	try
-	{
-		uninitialize();
-	}
-	catch (Exception& exc)
-	{
-		logger().log(exc);
-		rc = EXIT_CONFIG;
-	}
-	return rc;
+	return run();
 }
 
 
 void ServerApplication::defineOptions(OptionSet& options)
 {
 	Application::defineOptions(options);
-}
-
-
-void ServerApplication::handleOption(const std::string& name, const std::string& value)
-{
-	Application::handleOption(name, value);
 }
 
 
